<resources>
    <string name="app_name">DrawingActivity</string>
    <string name="layerHint">Layer %1$d</string>
    <string name="addLayerDialogTitle">Name Layer</string>
    <string name="addLayerSuccess">Created: %1$s</string>
    <string name="deleteLayerSuccess">Deleted: %1$s</string>
    <string name="deleteLayerFailure">Cannot Delete Last Layer!</string>
    <string name="editLayerSuccess">Renamed: %1$s To: %2$s</string>
    <string name="addLayerFailure">Failed to Create Layer.</string>
    <string name="layerNameTooLong">Layer Name is too long!</string>
    <string name="layerNameInUse">Layer Name in use.</string>
    <string name="confirmationButtonTextOk">OK</string>
    <string name="confirmationButtonTextConfirm">Confirm</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="addLayerNegativeButton">Cancel</string>
    <string name="editLayerDialogTitle">Edit Layer</string>
    <string name="buttonAddLayerText">Add Layer</string>
    <string name="buttonGradientText">Pick Color</string>
    <string name="buttonViewLayersText">View Layers</string>
    <string name="deleteLayerDialogTitle">Delete Layer</string>
    <string name="deleteLayerDialogBody">Are you sure you want to delete %1$s</string>
    <string name="buttonCloseLayerListViewText">Close</string>
    <string name="letterHue">H:</string>
    <string name="letterSaturation">S:</string>
    <string name="letterValue">V:</string>
    <string name="letterRed">R:</string>
    <string name="letterBlue">B:</string>
    <string name="letterGreen">G:</string>
    <string name="buttonImageGrabber">Image from Gallery</string>
    <string name="errorImageGrabberFailure">Failed to get image.</string>
</resources>