<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/myBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DrawActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.drawingactivity.DrawableAreaView
            android:id="@+id/drawableArea"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:padding="@dimen/largePadding" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addLayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonAddLayerText" />

            <Button
                android:id="@+id/viewLayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonViewLayersText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/grabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonImageGrabber" />

            <ImageView
                android:id="@+id/placeImage"
                android:layout_width="50dp"
                android:layout_height="100dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.2">

            <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bottomsheet_view" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</FrameLayout>