<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.drawingactivity.GradientView
                android:id="@+id/gradientPicker"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp" />

            <com.example.drawingactivity.HueView
                android:id="@+id/huePicker"
                android:layout_width="30dp"
                android:layout_height="150dp"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/topColor"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:background="#FF0000"
                android:gravity="center" />


            <View
                android:id="@+id/bottomColor"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:background="#000000"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterHue"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/hueText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="°"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterSaturation"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/satText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="%"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterValue"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/valText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="%"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterRed"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/redText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterBlue"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/blueText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/letterGreen"
                        android:textSize="20sp" />

                    <com.example.drawingactivity.ForcableEditText
                        android:id="@+id/greenText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.drawingactivity.ForcableEditText
                    android:id="@+id/hexText"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="ff0000"
                    android:textSize="20sp" />
            </LinearLayout>


            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>